--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
   </style>
 </head>
 <body>
+  <script src="https://sdk.minepi.com/pi-sdk.js"></script>
+  <script>
+    const Pi = window.Pi;
+    Pi.init({sandbox: true});
+  </script>
+
   <h1>PiWork - Legal Information</h1>
 
   <h2>Privacy Policy</h2>
