--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <p>We may update these Terms occasionally. Continued use of the app means acceptance of any changes.</p>
 
   <h3>6. Contact:</h3>
-  <p>For questions or concerns, please contact: [Deine E-Mail-Adresse]</p>
+  <p>For questions or concerns, please contact: yannick-rutz@outlook.de</p>
 
 </body>
 </html>
