--- a/public/index.html
+++ b/public/index.html
@@ -126,7 +126,12 @@
 
   <!-- Hauptinhalt -->
   <div id="root">
+<!-- Füge dies im <head>-Tag hinzu -->
+  <link rel="stylesheet" href="%PUBLIC_URL%/static/css/main.8f622cde.css">
 
+  <!-- Füge dies vor dem schließenden </body>-Tag hinzu -->
+  <script src="%PUBLIC_URL%/static/js/main.6f86abf0.js"></script>
+  
 
     <div id="main-content">
       <header>
