--- a/public/index.html
+++ b/public/index.html
@@ -125,7 +125,8 @@
   </div>
 
   <!-- Hauptinhalt -->
-  <div id="root">
+  <div id="root"></div> <!-- React wird hier in den DOM eingebunden -->
+  
 <!-- Füge dies im <head>-Tag hinzu -->
   <link rel="stylesheet" href="%PUBLIC_URL%/static/css/main.8f622cde.css">
 
@@ -283,7 +284,7 @@
 
 
 
-  </div> <!-- React wird hier in den DOM eingebunden -->
+  
 
  
 
