--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,12 @@
 <!DOCTYPE html>
 <html lang="de">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="stylesheet" href="%PUBLIC_URL%/static/css/main.8f622cde.css">
-  
-  <title>Task4Pi</title>
-</head>
-<body>
-  <!-- Hauptinhalt -->
-  <div id="root"></div> <!-- React wird hier in den DOM eingebunden -->
-  
- 
-
-  
-  
-
-   
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Task4Pi</title>
+  </head>
+  <body>
+    <noscript>Bitte aktiviere JavaScript, um diese Anwendung zu nutzen.</noscript>
+    <div id="root"></div>
+  </body>
 </html>
