--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/static/css/main.5fbc9ec8.chunk.css" />
     <title>Task4Pi</title>
-    <!-- Link zur Stylesheet-Datei, wenn notwendig -->
-    <link rel="stylesheet" href="%PUBLIC_URL%/static/css/main.5fbc9ec8.chunk.css">
   </head>
   <body>
-    <div id="root"></div> <!-- React wird hier in den DOM eingebunden -->
+    <div id="root"></div>
 
-    <!-- Skript für den React-Build -->
     <script src="%PUBLIC_URL%/static/js/runtime-main.d434435f.js"></script>
     <script src="%PUBLIC_URL%/static/js/2.80cde81b.chunk.js"></script>
     <script src="%PUBLIC_URL%/static/js/main.89749c38.chunk.js"></script>
